# FeEGELib

./: .gitignore  .gitmodules  CMakeLists.txt  FeEGELib.h  LICENSE  PERFORMANCE_OPTIMIZATION_REPORT.md  README.md  SOLUTION_SUMMARY.md  TEST_IMPLEMENTATION_SUMMARY.md  WIDGET_CODE_REVIEW.md  build_and_test.bat  build_and_test.sh  main.cpp
.github/workflows/: linux-cross-build.yml  mingw-w64-build.yml
_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake
build_test/: CMakeCache.txt  Makefile  cmake_install.cmake
docs/: Element.html  FeEGE.html  High_Priority_Optimizations_Implementation.md  InputBox_Scale_Fix.md  Knob_Architecture.md  Knob_Component_Documentation.md  Knob_Implementation_Summary.md  Layout_Scale_Fix.md  Performance_Optimization_Summary.md  README.md  Widget_Performance_Analysis.md  Widget_Performance_Plan.md  builders.html  button.html  collision.html  dropdown.html  element.html  examples.html  fix_inputbox_space_bug.md  fix_inputbox_space_bug_en.md  index.html  initXY.html  inputbox.html  knob.html  knob_examples.cpp  panel.html  pen.html  progressbar.html  radio-controller.html  radio.html  reflush.html  sidebar.html  slider.html  start.html  template.html  text.html  toggle.html  widget-base.html  第一个 FeEGELib 程序.md
include/: Base.h  Collision.h  Element.h  FeEGELib.h  Layout.h  Widget.h  ege.h  ege.zh_CN.h  font_manager.h  graphics.h  sys_edit.h
include/ege/: button.h  camera_capture.h  egecontrolbase.h  fps.h  label.h  stdint.h  sys_edit.h  types.h
src/: Base.cpp  Base.h  Collision.cpp  Collision.h  Control.cpp  Control.h  Element.cpp  Element.h  FeEGELib.cpp  FeEGELib.h  Layout.cpp  Widget.cpp  Widget.h  font_manager.cpp  sys_edit.cpp  sys_edit.h
test/: README.md  test_base.cpp  test_box.cpp  test_box_scale_interaction.cpp  test_collision.cpp  test_element_basic.cpp  test_inputbox_scale.cpp  test_inputbox_space.cpp  test_integration.cpp  test_layout.cpp  test_layout_scale.cpp  test_nested_panels.cpp  test_panel_scrollbar.cpp  test_widget.cpp
